[gd_scene load_steps=30 format=3 uid="uid://wekvrtqbsgyr"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_7ko4b"]
[ext_resource type="PackedScene" uid="uid://c5o5fgskntesd" path="res://Scenes/health_system_ui.tscn" id="2_4urmp"]
[ext_resource type="PackedScene" uid="uid://cwp5m1he55ll3" path="res://Scenes/projectile.tscn" id="2_23ubv"]
[ext_resource type="Script" path="res://Scripts/animation_controller.gd" id="3_acs1y"]
[ext_resource type="Script" path="res://Scripts/combat_system.gd" id="4_e1fdc"]
[ext_resource type="Shader" path="res://Scenes/takedamage.gdshader" id="4_ifv6p"]
[ext_resource type="Texture2D" uid="uid://csuhrcuxkkqpc" path="res://Assets/Player/MainDash2.png" id="4_u71ee"]
[ext_resource type="Script" path="res://Scripts/health_system.gd" id="5_6j51e"]
[ext_resource type="Texture2D" uid="uid://d3fysddvqppvr" path="res://Assets/Player/MainIdle.png" id="5_qhhqy"]
[ext_resource type="Texture2D" uid="uid://dbpo6x48nmwtc" path="res://Assets/Player/MainJalan1.png" id="6_shlhp"]
[ext_resource type="Texture2D" uid="uid://cs62a6rfesmi6" path="res://Assets/Player/MainJalan2.png" id="7_2863n"]
[ext_resource type="Texture2D" uid="uid://bubh0golm5rts" path="res://Assets/Senjata Rencong/Attack1.png" id="10_l28vs"]
[ext_resource type="Texture2D" uid="uid://bc1w52v7th3uu" path="res://Assets/Senjata Rencong/Attack2.png" id="11_2n2yy"]
[ext_resource type="Texture2D" uid="uid://cpeslytoyb11t" path="res://Assets/Senjata Rencong/Attack3.png" id="12_nl7mw"]
[ext_resource type="Texture2D" uid="uid://bn3iu1bqcjr0g" path="res://Assets/Senjata Rencong/Attack4.png" id="13_4mrtl"]
[ext_resource type="Texture2D" uid="uid://ci1fnasfwm6tg" path="res://Assets/Senjata Rencong/Attack5.png" id="14_lipla"]
[ext_resource type="Texture2D" uid="uid://cwps6dc04aem7" path="res://Assets/Senjata Rencong/Attack6.png" id="15_qwwvw"]
[ext_resource type="Script" path="res://Scripts/skill_bar.gd" id="18_1rw7k"]
[ext_resource type="PackedScene" uid="uid://eso200huv5dh" path="res://Scenes/skill_button.tscn" id="19_hwwhf"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tvvfq"]
shader = ExtResource("4_ifv6p")
shader_parameter/flash_color = Color(1, 0, 0, 1)
shader_parameter/flash_value = 0.0

[sub_resource type="SpriteFrames" id="SpriteFrames_4pqgq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_u71ee")
}],
"loop": true,
"name": &"dash",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_qhhqy")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_shlhp")
}, {
"duration": 1.0,
"texture": ExtResource("7_2863n")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="Animation" id="Animation_3xwyi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/flash_value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_sop3h"]
resource_name = "flash"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/flash_value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ejh7l"]
_data = {
"RESET": SubResource("Animation_3xwyi"),
"flash": SubResource("Animation_sop3h")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_1n23d"]
radius = 5.09902

[sub_resource type="SpriteFrames" id="SpriteFrames_u4fpa"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_l28vs")
}, {
"duration": 1.0,
"texture": ExtResource("11_2n2yy")
}, {
"duration": 1.0,
"texture": ExtResource("12_nl7mw")
}, {
"duration": 1.0,
"texture": ExtResource("13_4mrtl")
}, {
"duration": 1.0,
"texture": ExtResource("14_lipla")
}, {
"duration": 1.0,
"texture": ExtResource("15_qwwvw")
}],
"loop": false,
"name": &"attack",
"speed": 50.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5qudo"]
size = Vector2(49.75, 78)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ykgkh"]
size = Vector2(49.75, 78)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u1lr4"]
size = Vector2(14, 25)

[node name="CharacterBody2D" type="CharacterBody2D"]
collision_mask = 6
script = ExtResource("1_7ko4b")
projectile_node = ExtResource("2_23ubv")

[node name="HealthSystemUI" parent="." instance=ExtResource("2_4urmp")]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_tvvfq")
position = Vector2(0, -1)
sprite_frames = SubResource("SpriteFrames_4pqgq")
animation = &"walk"
frame_progress = 0.302447
offset = Vector2(0, -4)
script = ExtResource("3_acs1y")

[node name="FlashAnimation" type="AnimationPlayer" parent="AnimatedSprite2D"]
libraries = {
"": SubResource("AnimationLibrary_ejh7l")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -3)
shape = SubResource("CircleShape2D_1n23d")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.7, 1.7)
position_smoothing_enabled = true

[node name="TimerDashing" type="Timer" parent="."]

[node name="TimerCanAttack" type="Timer" parent="."]

[node name="TimerCanDash" type="Timer" parent="."]

[node name="CombatSystem" type="Node2D" parent="."]
script = ExtResource("4_e1fdc")

[node name="LeftWeaponSprite" type="AnimatedSprite2D" parent="CombatSystem"]
visible = false
position = Vector2(-36, -28)
scale = Vector2(0.278667, 0.266)
sprite_frames = SubResource("SpriteFrames_u4fpa")
animation = &"attack"
frame = 5
frame_progress = 1.0
flip_h = true

[node name="RightWeaponSprite" type="AnimatedSprite2D" parent="CombatSystem"]
visible = false
position = Vector2(36, -28)
scale = Vector2(0.278667, 0.266)
sprite_frames = SubResource("SpriteFrames_u4fpa")
animation = &"attack"
frame = 5
frame_progress = 1.0

[node name="WeaponHitbox" type="Area2D" parent="CombatSystem"]
position = Vector2(-140, -110)

[node name="LeftCollision" type="CollisionShape2D" parent="CombatSystem/WeaponHitbox"]
position = Vector2(108, 94)
shape = SubResource("RectangleShape2D_5qudo")
disabled = true

[node name="RightCollision" type="CollisionShape2D" parent="CombatSystem/WeaponHitbox"]
position = Vector2(172.125, 94)
shape = SubResource("RectangleShape2D_ykgkh")
disabled = true

[node name="BodyHitbox" type="Area2D" parent="CombatSystem"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CombatSystem/BodyHitbox"]
position = Vector2(0, -13.5)
shape = SubResource("RectangleShape2D_u1lr4")

[node name="HealthSystem" type="Node" parent="."]
script = ExtResource("5_6j51e")

[node name="Timer" type="Timer" parent="HealthSystem"]
one_shot = true

[node name="SkillUI" type="CanvasLayer" parent="."]

[node name="SkillBar" type="HBoxContainer" parent="SkillUI"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -42.0
offset_top = -40.0
offset_right = 42.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("18_1rw7k")

[node name="SkillButton" parent="SkillUI/SkillBar" instance=ExtResource("19_hwwhf")]
layout_mode = 2

[node name="SkillButton2" parent="SkillUI/SkillBar" instance=ExtResource("19_hwwhf")]
layout_mode = 2

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="TimerDashing" to="." method="_on_timer_dashing_timeout"]
[connection signal="timeout" from="TimerCanDash" to="." method="_on_timer_can_dash_timeout"]
[connection signal="animation_finished" from="CombatSystem/LeftWeaponSprite" to="." method="_on_left_weapon_sprite_animation_finished"]
[connection signal="animation_finished" from="CombatSystem/RightWeaponSprite" to="." method="_on_right_weapon_sprite_animation_finished"]
[connection signal="area_shape_entered" from="CombatSystem/WeaponHitbox" to="CombatSystem" method="_on_weapon_hitbox_area_shape_entered"]
[connection signal="body_entered" from="CombatSystem/WeaponHitbox" to="CombatSystem" method="_on_weapon_hitbox_body_entered"]
[connection signal="timeout" from="HealthSystem/Timer" to="HealthSystem" method="_on_timer_timeout"]
